# cpp_itch_5_0_parser

./: CMakeLists.txt  Dockerfile  Doxyfile.in  README.md  itch_parser.pc.in
include/itch-parser-c/: itch_parser.h
src/: itch_parser.cpp
